<resources>
    <string name="app_name">Portfolio Application</string>

    //Profile Fragment
    <string name="profile_name">Dipto Roy</string>
    <string name="profile_profession">Android Developer</string>
    <string name="profile_location">Rangpur</string>
    <string name="hireMe_text">Hire Me</string>
    <string name="dl_cv">Download CV</string>

    //Career Fragment
    <string name="career_company">Adornment Campus</string>
    <string name="career_job_position">Android Developer</string>
    <string name="career_duration">Feb 2021 - Present</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Blog Fragment
    <string name="blog_popular">Popular</string>
    <string name="blog_recent">Recent</string>
    <string name="blog_title">Learn OOP and Database!</string>
    <string name="blog_time">20 min ago</string>
    <string name="blog_read">read 10 times</string>
    <string name="blog_category">OOP Concept</string>
    <string name="blog_author">by Mark</string>
    <string name="blog_details">Learn OOP and Database!</string>


</resources>